[package]
name = "liquid-dsp-bindings"
version = "0.1.1"
authors = ["Jacob Holtom <jacob@holtom.me>"]
edition = "2018"
description = "These are the high-level Rust bindings for liquid-dsp (liquidsdr.org)"
license = "WTFPL"
keywords = ["sdr","dsp","liquid","signal","radio"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/jholtom/liquid-dsp-bindings"

[dependencies]
liquid-dsp-bindings-sys = "0.1.0"
